src/test/ui/kindck/kindck-impl-type-params-2.stderr
error[E0277]: the trait bound `Box<{integer}>: Foo` is not satisfied
  --> $DIR/kindck-impl-type-params-2.rs:13:16
   |
LL | fn take_param<T:Foo>(foo: &T) { }
   |                 --- required by this bound in `take_param`
...
LL |     take_param(&x);
   |                ^^ the trait `Copy` is not implemented for `Box<{integer}>`
   |
note: required because of the requirements on the impl of `Foo` for `Box<{integer}>`
  --> $DIR/kindck-impl-type-params-2.rs:6:14
   |
LL | impl<T:Copy> Foo for T {
   |              ^^^     ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
